[gd_scene load_steps=18 format=2]

[ext_resource path="res://Spot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://resources/theme/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://Store.gd" type="Script" id=4]
[ext_resource path="res://spot_group.gd" type="Script" id=5]
[ext_resource path="res://resources/fonts/FjallaOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://resources/coin.png" type="Texture" id=7]
[ext_resource path="res://resources/reroll.png" type="Texture" id=8]
[ext_resource path="res://units/sprites/eagle.png" type="Texture" id=9]
[ext_resource path="res://UI/InfoPanel.gd" type="Script" id=10]
[ext_resource path="res://types/sprites/aquatic.png" type="Texture" id=11]
[ext_resource path="res://units/AttackIndicator.tscn" type="PackedScene" id=12]
[ext_resource path="res://units/HealthIndicator.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 42
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Player" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.05945
margin_right = 1.05945
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineupSpots" type="Node2D" parent="."]
position = Vector2( 592.941, 438 )
script = ExtResource( 5 )
disToCover = 700

[node name="Spot1" parent="LineupSpots" instance=ExtResource( 1 )]

[node name="Spot2" parent="LineupSpots" instance=ExtResource( 1 )]

[node name="Spot3" parent="LineupSpots" instance=ExtResource( 1 )]

[node name="Graveyard" type="Node2D" parent="."]
position = Vector2( 640.941, 786 )
script = ExtResource( 5 )
disToCover = 700

[node name="LeaveScreen" type="Node2D" parent="."]

[node name="BenchSpots" type="Node2D" parent="LeaveScreen"]
position = Vector2( 593.941, 595 )
script = ExtResource( 5 )
disToCover = 900

[node name="Spot1" parent="LeaveScreen/BenchSpots" instance=ExtResource( 1 )]

[node name="Spot2" parent="LeaveScreen/BenchSpots" instance=ExtResource( 1 )]

[node name="Spot3" parent="LeaveScreen/BenchSpots" instance=ExtResource( 1 )]

[node name="Spot4" parent="LeaveScreen/BenchSpots" instance=ExtResource( 1 )]

[node name="Spot5" parent="LeaveScreen/BenchSpots" instance=ExtResource( 1 )]

[node name="Spot6" parent="LeaveScreen/BenchSpots" instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 638.94, 360 )
current = true

[node name="Tween" type="Tween" parent="."]

[node name="GUI" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Store" type="Panel" parent="GUI"]
anchor_right = 0.499
anchor_bottom = 0.5
margin_left = 1.0
margin_top = 2.0
margin_right = 854.0
margin_bottom = 292.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection" type="Node2D" parent="GUI/Store"]
position = Vector2( 504.941, 132 )
script = ExtResource( 5 )
disToCover = 853

[node name="Spot1" parent="GUI/Store/Selection" instance=ExtResource( 1 )]

[node name="Spot2" parent="GUI/Store/Selection" instance=ExtResource( 1 )]

[node name="Spot3" parent="GUI/Store/Selection" instance=ExtResource( 1 )]

[node name="CoinsLabel" type="Label" parent="GUI"]
margin_left = 102.941
margin_top = 642.0
margin_right = 150.941
margin_bottom = 696.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "x 2"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GUI/CoinsLabel"]
position = Vector2( -42, 24 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 7 )

[node name="InfoPanel" type="Panel" parent="GUI"]
anchor_left = 0.632
anchor_right = 1.0
anchor_bottom = 0.353
margin_left = 855.0
margin_right = 1280.0
margin_bottom = 291.0
theme = ExtResource( 3 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitPanel" type="Panel" parent="GUI/InfoPanel"]
margin_right = 423.0
margin_bottom = 292.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GUI/InfoPanel/UnitPanel"]
position = Vector2( 218.941, 97 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="AttackIndicator" parent="GUI/InfoPanel/UnitPanel" instance=ExtResource( 12 )]
margin_left = 54.9406
margin_top = 141.0
margin_right = 85.9406
margin_bottom = 169.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="HealthIndicator" parent="GUI/InfoPanel/UnitPanel" instance=ExtResource( 13 )]
margin_left = 36.9406
margin_top = 28.0
margin_right = 79.9406
margin_bottom = 70.0
rect_scale = Vector2( 2.5, 2.5 )

[node name="Type1" type="Sprite" parent="GUI/InfoPanel/UnitPanel"]
position = Vector2( 362.94, 56 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 11 )

[node name="Type2" type="Sprite" parent="GUI/InfoPanel/UnitPanel"]
position = Vector2( 362.94, 145 )
scale = Vector2( 0.09, 0.09 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="GUI/InfoPanel/UnitPanel"]
margin_left = 30.0
margin_top = 206.0
margin_right = 397.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 2 )
text = "Description..................... ............................. ....................................... ...................."
align = 1
valign = 1
autowrap = true

[node name="ReadyButton" type="Button" parent="GUI"]
margin_left = 372.0
margin_top = 251.0
margin_right = 555.0
margin_bottom = 329.0
custom_fonts/font = SubResource( 3 )
text = "Next Round"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RerollButton" type="Button" parent="GUI"]
margin_left = 33.9406
margin_top = 66.0
margin_right = 150.941
margin_bottom = 183.0
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 8 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsLabel" type="Label" parent="GUI/RerollButton"]
margin_left = 63.0
margin_top = 120.0
margin_right = 106.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "x 2"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GUI/RerollButton/CoinsLabel"]
position = Vector2( -28.0596, 24 )
scale = Vector2( 0.0987055, 0.0987055 )
texture = ExtResource( 7 )

[node name="BattleParent" type="Node2D" parent="."]
z_index = -2

[connection signal="pressed" from="GUI/ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="pressed" from="GUI/RerollButton" to="." method="_on_RerollButton_pressed"]
